tests/samples/valid/cyclical_structure_pointers.pn
struct Red
{
	left: &Black,
	right: &Black,
}

struct Black
{
	left: &Red,
	right: &Red,
}

struct Tree
{
	left: &Tree,
	right: &Tree,
}
